--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,10 @@
 <p>
   Start editing to see some magic happen :)
 </p>
+
+<nav>
+    <a routerLink="en/home" routerLinkActive="active">Home</a>
+    <a routerLink="en/about">About</a>
+    <a routerLink="en/services">Services</a>
+</nav>
+<router-outlet></router-outlet>
