--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
-
 <nav>
     <a routerLink="en/home" routerLinkActive="active">Home</a>
-    <a routerLink="en/about">About</a>
-    <a routerLink="en/services">Services</a>
+    <a routerLink="en/about" routerLinkActive="active">About</a>
+    <a routerLink="en/services" routerLinkActive="active">Services</a>
+    <a routerLink="en/contact" routerLinkActive="active">Contact</a>
 </nav>
 <router-outlet></router-outlet>
