--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,23 @@
-p {
+* {
   font-family: Lato;
+}
+
+nav{
+  background-color: #f9f9f9;
+}
+
+nav a{
+  display: inline-block;
+  margin: 10px;
+  padding: 4px 8px;
+  background-color: #c9c9c9;
+  color: #000;
+  border-radius: 8px;
+  text-decoration: none;
+   
+}
+
+nav a.active{
+  background-color: #000;
+  color: #fff;
 }
