Dynamic menu done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<nav>
-    <a routerLink="en/home" routerLinkActive="active">Home</a>
-    <a routerLink="en/about" routerLinkActive="active">About</a>
-    <a routerLink="en/services" routerLinkActive="active">Services</a>
-    <a routerLink="en/contact" routerLinkActive="active">Contact</a>
-</nav>
+<app-en-header></app-en-header>
 <router-outlet></router-outlet>
