solved raw html event binding

--- a/src/app/en-pages-component/en-pages-component.component.html
+++ b/src/app/en-pages-component/en-pages-component.component.html
@@ -3,3 +3,8 @@ en-pages-component works!
 <br />
 Page name: {{pagename}}
 </p>
+<p>
+  {{dynamicValue}}
+</p>  
+<div id="warpper" [innerHTML]="pageContent | safeHtml">
+</div>  
