border issue fixed

--- a/src/app/en-header/en-header.component.html
+++ b/src/app/en-header/en-header.component.html
@@ -17,13 +17,13 @@
 		</div>
 	</div>
 	<!--Main navbar-->
-	<nav class="navbar navbar-main navbar-expand-lg navbar-transparent">
+	<nav class="navbar navbar-main navbar-light navbar-expand-lg navbar-transparent">
 		<div class="container px-lg-0">
 			<a class="navbar-brand mr-lg-5" href="#">
 				<img alt="Image placeholder" src="https://i.ibb.co/VwX9w5j/logo.png" id="navbar-logo" style="height: 70px;">
-               </a>
+      </a>
                
-               <button class="navbar-toggler" type="button" (click)="openMenu();">
+              <button class="navbar-toggler" type="button" (click)="openMenu();">
                 <span class="navbar-toggler-icon"></span>
               </button>
 
