--- a/src/assets/css/frontend.css
+++ b/src/assets/css/frontend.css
@@ -17,7 +17,7 @@ body{
   }
   
   .Carousel {
-    /* position: absolute; */
+    / position: absolute; /
     width: 100%;
     height: 100%;
     background: blue;
@@ -83,23 +83,38 @@ body{
       max-width: 400px;
   }
 
-  .icon-chevron-sign-right{
-    background-image: url('https://i.ibb.co/kSqY1ZB/right-arrow.png');
-    width: 40px;
-    height: 40px;
-    display: block;
-    background-position: center;
-    background-size: cover;
-  }
+  .carousel-control-prev-icon,
+.carousel-control-next-icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: no-repeat 50% / 100% 100%;
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23297FCA' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e");
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23297FCA' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
+}
+
+.carousel-indicators li{
+  background-color: #297FCA;
+}
+
+  /* About Us */
   
-  .icon-chevron-sign-left{
-    background-image: url('https://i.ibb.co/tYvvLLg/left-arrow.png');
-    width: 40px;
-    height: 40px;
-    display: block;
-    background-position: center;
-    background-size: cover;
-  }
+.about-banner{
+  width: 100%;
+}
+
+@media (min-width: 576px){
+.jumbotron {
+  padding: 0rem 0rem;
+}
+}
+
 
   /* Footer */
 
